--- a/Graphics-R-Program.Rmd
+++ b/Graphics-R-Program.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 #if(!require("remotes"))install.packages("remotes")
 #remotes:install_github("tdhock/animint2")
 #install.packages("remote")
-#install.packages("gistr")
+install.packages("gistr")
 ```
 
 
@@ -267,13 +267,13 @@ wolves %>%
 
 Make a new map that shows the distribution of wolves in the lower 48 US states but which has the size of location markers adjusted by pack size.
 ```{r}
-wolfplot <- ggplot() +
+wolfplot <- animint(ggplot() +
   geom_sf(data=us_lower, size=0.2) + 
   geom_point(data=wolves_US, aes(long,lat,size=pack.size,color=pack.size), shape=5) + theme_minimal()+
-  labs(title = "Distribution of Wolves in Lower 48 US states by Pack Size", x = "Longitude", y="Latitude")
+  labs(title = "Distribution of Wolves in Lower 48 US states by Pack Size", x = "Longitude", y="Latitude"))
 
   #devtools::install_github('rOpenSci/gistr')
-  animint2gist(animint(wolfplot))   # Applies animint to wolfplot, opens link to bl.ocks.org.
+  animint2gist(wolfplot)   # Applies animint to wolfplot, opens link to bl.ocks.org.
   wolfplot
 
 ```
