--- a/Hard Test (Unit Testing).Rmd
+++ b/Hard Test (Unit Testing).Rmd
@@ -88,9 +88,7 @@ getHTML <- function(){
 }
 
 expect_transform <- function(actual, expected, context = "translate", tolerance = 5) {
-  # supports multiple contexts
   nocontext <- gsub(paste(context, collapse = "||"), "", actual)
-  # reduce to some 'vector' of numbers: (a, b, c, ...)
   vec <- gsub("\\)\\(", ",", nocontext)
   clean <- gsub("\\)", "", gsub("\\(", "", vec))
   nums <- as.numeric(strsplit(clean, split = "\\,")[[1]])
@@ -349,7 +347,7 @@ viz <- ggplot() +
 ```
 
 ```{r}
-# Testing whether the amount of coin flips is correctly interpreted in the animint. 
+# Testing whether the number of coin flips is correctly interpreted in the animint. 
 test_that("Number of coin flip trials is what's expected", {
   viztestingcoinflips <- animint2dir(viz_animint, open.browser=FALSE)
   expect_identical(flips, as.character(1:100))
@@ -365,7 +363,6 @@ test_that("animint2gist() returns a gist", {
   gistr::delete(g)
 })
 ```
-
 
 ```{r}
 tests_init()
